# proctools

./: .gitignore  README.md  pyproject.toml
src/proctools/: __init__.py  util.py
src/proctools/cli/: __init__.py  _common.py  common.py  logger.py  status.py
src/proctools/products/: __init__.py  adapters.py  bases.py  dataproduct.py  depot.py  loader.py  meta.py  mixins.py  util.py
src/proctools/products/pancam/: __init__.py  ancillary.py  file_handlers.py  meta.py  mixins.py  observational.py
tests/products/: conftest.py  test_depot.py  test_meta.py
tests/products/datasets/depot/: pan_cal_hk_all-hk_20210921t083156.767z_20210921t102515.167z.tab  pan_cal_hk_all-hk_20210921t083156.767z_20210921t102515.167z.xml  pan_raw_sc_l07_observation_20210921t095128.246z.xml  pan_raw_sc_l08_observation_20210921t095204.246z.xml  pan_raw_sc_l09_observation_20210921t095237.246z.xml  pan_raw_sc_r01_observation_20210921t101118.046z.xml  pan_raw_sc_r04_observation_20210921t095359.248z.xml  stats.json
tests/products/datasets/depot/cdp/: pan_der_calib_h_rad-flat-prm_20210504t150000.000z.xml  pan_der_calib_h_rad-ssr-prm_20210504t180000.000z.csv  pan_der_calib_h_rad-ssr-prm_20210504t180000.000z.xml  pan_der_calib_l_rad-flat-prm_20210504t130000.000z.xml  pan_der_calib_l_rad-ssr-prm_20210504t160000.000z.csv  pan_der_calib_l_rad-ssr-prm_20210504t160000.000z.xml  pan_der_calib_r_rad-flat-prm_20210504t140000.000z.xml  pan_der_calib_r_rad-ssr-prm_20210504t170000.000z.csv  pan_der_calib_r_rad-ssr-prm_20210504t170000.000z.xml
