[project]
name = "proctools"
version = "0.2.1"
authors = [
    { name="Ariel Ladegaard", email="arl13@aber.ac.uk" },
    { name="Alun Jones", email="alj118@aber.ac.uk" }
]
description = "ProcTools - Common tools for (ExoMars) data product processing software"
readme = "README.md"
license = "MIT"
keywords = ["processing", "PDS4", "ExoMars"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "coloredlogs>=14.0.1",
    "lxml>=6.0.0",
    "numpy>=2.2.0",
    "pds4-tools>=1.4",
    "passthrough",
]

[project.urls]
Repository = "https://github.com/ExoMars-PanCam/proctools"

[project.optional-dependencies]
cli = [
    "typer>=0.16.1",
]

[build-system]
requires = [ "uv_build" ]
build-backend = "uv_build"

[tool.uv.sources]
passthrough = { path = "../passthrough" }

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
]
