[project]
name = "proctools"
version = "0.3.1"
description = "ProcTools - Common tools for PDS4 data product processing"
authors = [
    { name = "Ariel Ladegaard", email = "arl13@aber.ac.uk" },
    { name = "Alun Jones", email = "alun.jones@aber.ac.uk" }
]
readme = "README.md"
license = "MIT"
keywords = [
    "processing",
    "PDS4",
    "ExoMars"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Utilities",
]

requires-python = ">=3.8,<3.9"
dependencies = [
    "lxml>=4.6.3,<5",
    "numpy>=1.22.0,<2",
    "pds4-tools>=1.2,<2",
#    "passthrough==0.4.0",
    "passthrough @ file:///home/alj118/lxc/pancam/git/passthrough",
]

[project.optional-dependencies]
cli = ["typer>=0.3.2,<0.5.0"]

[project.urls]
Repository = "https://github.com/ExoMars-PanCam/proctools"

[dependency-groups]
dev = [
    "pytest>=3.5",
    "black>=20.8b1,<21",
    "isort>=5.10.1,<6",
    "ruff>=0.15.8",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | build
    | dist
  )/
)
'''
experimental-string-processing = true

[tool.isort] # black compatibility
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

